Editor: Fix the keyboard image width calculation
We want the image to take as much horizontal space as available. That's the
entire width, except the sidebar's width and the horizontal margins.

Previously, the horizontal margins weren't accounted for, and some of the images
ended up overflowing, and becoming partially hidden by the sidebar.

--- a/src/styles/keymap.css
+++ b/src/styles/keymap.css
@@ -23,9 +23,6 @@ button {
   font-family: "Source Code Pro", monospace;
   font-size: 8px;
   font-weight: 700;
-  min-width: 550px;
-  min-height: 280px;
-  max-width: calc(100vw - 360px);
 }
 
 .short-legend {
